--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     autocapitalize="off"
                     spellcheck="false"
                     onkeypress="putStorage()"
-                    disabled="disabled"
+                    /*disabled="disabled"*/
                     /><button class="syncInput" onClick="randSynckey();">&#8634;</button> 
                 <!-- <label for="syncKey">Sync Key:</label> -->
                 <div class="infoSynckey">USE THIS SYNC CODE TO SYNC DATA ACROSS DEVICES</div>
@@ -295,8 +295,8 @@
 <script src="./lib/firebase/firebase-database.js"></script>
 <script src="./lib/firebaseui/dist/firebaseui.js"></script>
 <script src="./js/app.js"></script>
-<script src="./js/app.crypt.js"></script>
 <script src="./js/app.xkcd.js"></script>
+<script src="./js/app.crypt.js"></script>
 <script src="./js/app.firebase.js"></script>
 
 </html>
