fixed git bullshit and encryption issue

--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
         <div id="about" class="modal modal-fixed-footer">
             <div class="modal-content">
                 <article>
-                    <h2><a id="Passcloud_20_0"></a>Passcloud 2.0</h2>
+                    <h2>
+                        <a id="Passcloud_20_0"></a>Passcloud 2.0</h2>
                     <p>Alpha testing of 2.0: <a href="https://passcld.herokuapp.com/">https://passcld.herokuapp.com/</a></p>
                     <p>
                         <a href="https://heroku.com/deploy?template=https://github.com/spencerthayer/Passcloud"><img src="https://www.herokucdn.com/deploy/button.png" alt="Deploy"></a>
@@ -245,25 +246,9 @@
         </li>
         <li><a><i class="material-icons">cloud</i>Passcloud 2.0 alpha</a></li>
         <li>
-            <div class="input-field"> 
-                <input
-                    type="text"
-                    name="syncKey"
-                    value=""
-                    id="syncKey"
-                    class="syncKey"
-                    title=""
-                    autocomplete="off"
-                    autocorrect="off"
-                    autocapitalize="off"
-                    spellcheck="false"
-<<<<<<< HEAD
-                    onkeypress="putStorage()"
-                    /*disabled="disabled"*/
-=======
-                    onkeypress="putStorage()";
->>>>>>> parent of d13ecac... Sync setup.
-                    /><button class="syncInput" onClick="randSynckey();">&#8634;</button> 
+            <div class="input-field">
+                <input type="text" name="syncKey" value="" id="syncKey" class="syncKey" title="" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" onkeypress="putStorage()" /*disabled="disabled" */ /><button class="syncInput"
+                    onClick="randSynckey();">&#8634;</button>
                 <!-- <label for="syncKey">Sync Key:</label> -->
             </div>
         </li>
