--- a/index.html
+++ b/index.html
@@ -51,18 +51,18 @@
                 <div class="input-field masterPassword col s12 m12 l12 text-white inline">
                     <input type="password" name="masterPass" value="" id="masterPass" class="masterPass" title="Choose a strong Master Password." autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="1" /><button class="clearInput"
                         onClick="clearInput(masterPass);">&#10005;</button>
-                    <label class="mp" for="master">Master Password:</label>
+                    <label class="mp" for="masterPass">Master Password:</label>
                 </div>
             </header>
             <div class="row">
                 <div class="input-field col s12 m6 l6">
                     <input type="url" name="siteName" value="" id="siteName" class="" title="Please enter a doman or site name." autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="2" /><button class="clearInput" onClick="clearInput(siteName);">&#10005;</button>
-                    <label for="site">Site Name:</label>
+                    <label for="siteName">Site Name:</label>
                 </div>
                 <div class="input-field col s12 m6 l6">
                     <input type="text" name="userProfile" value="" id="userProfile" class="" title="Please enter a valid username or profile." autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="3" /><button class="clearInput"
                         onClick="clearInput(userProfile);">&#10005;</button>
-                    <label for="profile">User Profile:</label>
+                    <label for="userProfile">User Profile:</label>
                 </div>
             </div>
             <div class="row">
