--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <li><a><i class="material-icons">cloud</i>Passcloud 2.0 alpha</a></li>
         <li>
             <div class="input-field">
-                <input type="text" name="syncKey" value="" id="syncKey" class="syncKey" title="" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" onkeypress="putStorage()" /*disabled="disabled" */ /><button class="syncInput"
+                <input type="text" name="syncKey" value="" id="syncKey" class="syncKey" title="" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" onkeypress="putSyncKey()" /*disabled="disabled" */ /><button class="syncInput"
                     onClick="randSynckey();">&#8634;</button>
                 <!-- <label for="syncKey">Sync Key:</label> -->
             </div>
