--- a/index.html
+++ b/index.html
@@ -283,6 +283,10 @@
 <script src="./lib/firebase/firebase-database.js"></script>
 <script src="./lib/firebaseui/dist/firebaseui.js"></script>
 <script src="./js/app.js"></script>
+<script src="./js/app.model.js"></script>
+<script src="./js/app.storage.js"></script>
+<script src="./js/app.controller.js"></script>
+<script src="./js/app.view.js"></script>
 <script src="./js/app.xkcd.js"></script>
 <script src="./js/app.crypt.js"></script>
 <script src="./js/app.firebase.js"></script>
