Adding New Updates

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Passcloud" />
     <meta property="og:description" content="Passcloud" />
-    <meta property="og:url" content="https://passcloud.me" />
+    <meta property="og:url" content="https://passcloud.co" />
     <meta property="og:image" content="./img/bg.png" />
     <!-- TWITTER META -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="Passcloud" />
     <meta name="twitter:title" content="Passcloud" />
-    <meta name="twitter:description" content="https://passcloud.me" />
+    <meta name="twitter:description" content="https://passcloud.co" />
     <meta name="twitter:image" content="./img/bg.png>" />
-    <meta name="twitter:twitter:image:alt" content="https://passcloud.me" />
+    <meta name="twitter:twitter:image:alt" content="https://passcloud.co" />
     <!-- STYLES -->
     <!--<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />-->
     <link type="text/css" rel="stylesheet" href="./css/materialize.min.css" />
