--- a/index.html
+++ b/index.html
@@ -18,24 +18,26 @@
     <link rel="icon" type="image/png" href="./img/favicon.png">
     <link rel="apple-touch-icon" href="./img/favicon.png" />
     <link rel="apple-touch-icon-precomposed" href="./img/favicon.png" />
+    <meta property="og:logo" content="./img/favicon.png" />
     <!-- FACEBOOK META -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Passcloud" />
     <meta property="og:description" content="Passcloud" />
-    <meta property="og:url" content="https://passcloud.me" />
+    <meta property="og:url" content="https://passcloud.co" />
     <meta property="og:image" content="./img/bg.png" />
     <!-- TWITTER META -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="Passcloud" />
     <meta name="twitter:title" content="Passcloud" />
-    <meta name="twitter:description" content="https://passcloud.me" />
+    <meta name="twitter:description" content="https://passcloud.co" />
     <meta name="twitter:image" content="./img/bg.png>" />
-    <meta name="twitter:twitter:image:alt" content="https://passcloud.me" />
+    <meta name="twitter:twitter:image:alt" content="https://passcloud.co" />
     <!-- STYLES -->
     <!--<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />-->
-    <link type="text/css" rel="stylesheet" href="./css/materialize.min.css" />
+    <!-- <link type="text/css" rel="stylesheet" href="./css/materialize.min.css" /> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link type="text/css" rel="stylesheet" href="./css/materialicons.css" />
-    <link type="text/css" rel="stylesheet" href="./lib/firebaseui/dist/firebaseui.css" />
+    <link type="text/css" rel="stylesheet" href="./lib/github-markdown-css/github-markdown.css" />
     <link type="text/css" rel="stylesheet" href="./css/app.css" />
 </head>
 
@@ -80,7 +82,7 @@
                         <option value="4">4</option>
                         <option value="6">6</option>
                     </select>-->
-                    <label>Lenght:</label>
+                    <label>Length:</label>
                 </div>
                 <div class="input-field col s4 m2 l2">
                     <input type="number" pattern="[0-9]*" id="year" value="document.write(currentYear);" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="5" />
@@ -182,41 +184,7 @@
         <!-- Modal Structure -->
         <div id="about" class="modal modal-fixed-footer">
             <div class="modal-content">
-                <article>
-                    <h2>
-                        <a id="Passcloud_20_0"></a>Passcloud 2.0</h2>
-                    <p>Alpha testing of 2.0: <a href="https://passcld.herokuapp.com/">https://passcld.herokuapp.com/</a></p>
-                    <p>
-                        <a href="https://heroku.com/deploy?template=https://github.com/spencerthayer/Passcloud"><img src="https://www.herokucdn.com/deploy/button.png" alt="Deploy"></a>
-                    </p>
-                    <h3>
-                        <a id="What_is_Passcloud_6"></a>What is Passcloud?</h3>
-                    <p>For most people, passwords are a real problem. Remembering passwords is a pain and using the same password everywhere will eventually lead to a disaster. While traditional password managers solve this with lots of random passwords</p>
-                    <p>they have to save your passwords in their databases. This makes your lists of passwords vulnerable to hacking and interception.<br> Passcloud attempts to solve the problem other password managers have by never storing your passwords.
-                        Instead, Passcloud generates pseudo-random passwords based on the Mersenne Twister PRNG algorithm. Users combine the same repeatable information based on a master password and always get the same unique password.</p>
-                    <p>By using Passcloud for every site you visit you’re less vulnerable to security breaches, even if one password is compromised all of your other passwords generated from the same Passcloud remains secure!</p>
-                    <h3>
-                        <a id="Nothing_to_Hack_15"></a>Nothing to Hack</h3>
-                    <p>With Passcloud there is nothing to intercept since it uses client-side JavaScript and avoids sending sensitive data across a network, making it one of the most secure password managers available. Passcloud is based on a stateless algorithm
-                        which frees it from the reliance on storage of secrets.</p>
-                    <p>Since your generated passwords aren’t saved to your device, there is no risk you’ll be forced to divulge them to aggressive peers. And since these passwords don’t need to be backed up or synchronized between devices over the network,there
-                        is no risk of them getting intercepted.</p>
-                    <p>Finally, Passcloud is free software (GPLv3), its algorithm extensively documented and does not require you to trust any external party. This is particularly interesting in a society where things like PRISM and gag orders are a real
-                        threat.
-                    </p>
-                    <h3>
-                        <a id="Always_In_Sync_23"></a>Always In Sync</h3>
-                    <p>No cloud provider to trust, no backups to maintain and no data connection for keeping in sync. Contrary to other password solutions, Passcloud doesn’t need to send your passwords over the network to make them ubiquitously available.</p>
-                    <p>Just add your information into each of your devices and your passwords will be available instantly on all of them.</p>
-                    <p>No cloud provider to trust, no backups to maintain and no data connection for keeping in sync. Since Passcloud generates your passwords on-demand based on your user name and Passcloud, you don’t have any of these fragile dependencies.</p>
-                    <p>This gives you massive availability advantages, but also helps thwart man-in-the-middle attacks, snooping and trust issues related to cloud providers.</p>
-                    <p>Since Passcloud generates your passwords on-demand based on your information and master password, you don’t have any of these fragile dependencies. This gives you massive availability advantages but also helps thwart man-in-the-middle
-                        attacks, snooping and trust issues related to cloud providers.</p>
-                    <h3>
-                        <a id="For_Any_Purpose_34"></a>For Any Purpose</h3>
-                    <p>Passcloud comes with a variety of built-in password types. These types make your password look different, become more secure or more compatible with a site’s password policy.<br> Passcloud also implements a solution that allows you
-                        to save custom information in the app. This information is AES encrypted using a large key derived from your master password.</p>
-                </article>
+                <article id="readme" class="markdown-body"></article>
             </div>
             <div class="modal-footer">
                 <div class="col l6 s12 left">
@@ -244,40 +212,32 @@
                     <a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>-->
             </div>
         </li>
-        <li><a><i class="material-icons">cloud</i>Passcloud 2.0 alpha</a></li>
         <li>
             <div class="input-field">
                 <input type="text" name="syncKey" value="" id="syncKey" class="syncKey" title="" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" onkeypress="putSyncKey()" /*disabled="disabled" */ /><button class="syncInput"
                     onClick="randSynckey();">&#8634;</button>
-                <!-- <label for="syncKey">Sync Key:</label> -->
             </div>
         </li>
-        <!-- <li>
-            <div class="divider"></div>
-        </li> -->
-        <!--<li class="search">
-                <div class="search-wrapper">
-                    <input id="search"><i class="material-icons">search</i>
-                    <div class="search-results"></div>
-                </div>
-            </li>-->
         <li>
-            <a class="subheader">Saved Sites</a>
+            <!-- <a class="subheader">Saved Sites</a> -->
             <button class="waves-effect waves-light btn light-blue z-depth-0" id="sync" style="margin-left:22px;" onclick="sync();">Sync</button>
         </li>
         <li>
             <a class="waves-effect">
-                <img src="https://ucygetfavicon.appspot.com/http://google.com" class="favicon circle" /> Test Google
+                    <!-- <img src="https://ucygetfavicon.appspot.com/http://google.com" class="favicon circle" /> Test Google -->
+                    <img src="https://logo.clearbit.com/google.com" class="favicon circle" style="margin-top: 2px;" /> Test Google
             </a>
         </li>
     </ul>
 </body>
 <!--<script src="./js/" data-version="" data-source=""></script>-->
 <script src="./lib/jquery/dist/jquery.min.js" data-version="3.2.1" data-source="https://github.com/jquery/jquery"></script>
-<script src="./lib/materialize/dist/js/materialize.min.js" data-version="0.98.2" data-source="https://github.com/dogfalo/materialize"></script>
+<!-- <script src="./lib/materialize/dist/js/materialize.min.js" data-version="0.98.2" data-source="https://github.com/dogfalo/materialize"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 <script src="./lib/chance/dist/chance.min.js" data-version="1.0.4" data-source="https://github.com/chancejs/chancejs"></script>
 <script src="./lib/clipboard/dist/clipboard.min.js" data-version="1.7.1" data-source="https://github.com/zenorocha/clipboard.js"></script>
 <script src="./lib/crypto-js/crypto-js.js"></script>
+<script src="./lib/marked/marked.min.js" data-version="0.3.18" data-source="https://github.com/markedjs/marked"></script>
 <script src="./lib/firebase/firebase-app.js"></script>
 <script src="./lib/firebase/firebase-auth.js"></script>
 <script src="./lib/firebase/firebase-database.js"></script>
@@ -290,5 +250,10 @@
 <script src="./js/app.xkcd.js"></script>
 <script src="./js/app.crypt.js"></script>
 <script src="./js/app.firebase.js"></script>
-
+<script>
+    $.get("./readme.md", function(data) {
+        document.getElementById("readme").innerHTML =
+            marked(data);
+         }, "html");
+</script>
 </html>
