Updates to readme, changes to type names.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 <option value="username">USERNAME</option>
                                 <option value="phrase">PHRASE</option>
                                 <option value="noun">NOUN</option>
-                                <option value="xkcd" data-alternative="DICEWARE">XKCD</option>
+                                <option value="xkcd" data-alternative="DICEWARE">DICEWARE</option>
                                 <!--<option value="salt">SALT</option>-->
                             </select>
                     <label>Type:</label>
