Changes to passwords, updates to Material CSS

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <link type="text/css" rel="stylesheet" href="./css/materialicons.css" />
     <link type="text/css" rel="stylesheet" href="./library/github-markdown-css/github-markdown.css" />
     <link type="text/css" rel="stylesheet" href="./css/app.css" />
+    <link type="text/css" rel="stylesheet" href="./css/customization.css" />
 </head>
 
 <body class="" onchange="formInteraction();" onkeypress="formInteraction();" onkeyup="formInteraction();">
@@ -112,7 +113,7 @@
                         <li>
                             <a class="collapsible-header">OPTIONS: <span class="right" id="optionsArrow">&#8675;</span></a>
                             <div class="collapsible-body options">
-                                <ul>
+                                <ul class="passchecks">
                                     <li>
                                         <input type="checkbox" class="filled-in tooltipped" id="unique" checked="checked" />
                                         <label for="unique" id="uniqueLabel" class="tooltipped" data-position="left" data-delay="100" data-tooltip="Prevent duplicate characters.">
@@ -145,7 +146,7 @@
                                     </li>
                                     <li>
                                         <input type="checkbox" class="filled-in tooltipped" id="extended" />
-                                        <label for="extended" id="extendedLabel" class="tooltipped" data-position="left" data-delay="100" data-tooltip="¡ ¢ £ ¤ ¥ ¦ § ¨ © ª ® ° ± µ ¿">
+                                        <label for="extended" id="extendedLabel" class="tooltipped" data-position="left" data-delay="100" data-tooltip="¡ ¢ £ ¤ ¥ ¦ § ¨ ™ © ® ª ° ± µ ¿ × ÷">
                                             Extended
                                         </label>
                                     </li>
