--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="col s6 m3 l3">
                     <ul class="collapsible collapsible-accordion z-depth-0" id="optionsMenu" data-open="no">
                         <li>
-                            <a class="collapsible-header">OPTIONS: <span class="right" id="optionsArrow">&#8675;</span></a>
+                            <a class="collapsible-header">OPTIONS: <span class="pusharrowsright" id="optionsArrow">&#8675;</span></a>
                             <div class="collapsible-body options">
                                 <ul class="passchecks">
                                     <li>
