--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <meta name="twitter:twitter:image:alt" content="https://passcloud.co" />
     <!-- STYLES -->
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />-->
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> -->
     <link type="text/css" rel="stylesheet" href="./library/materialize/css/materialize.min.css" />
     <link type="text/css" rel="stylesheet" href="./css/materialicons.css" />
     <link type="text/css" rel="stylesheet" href="./library/github-markdown-css/github-markdown.css" />
