--- a/index.html
+++ b/index.html
@@ -7,25 +7,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <!-- IOS META -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="white-translucent" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
     <meta name="google" value="notranslate" />
     <meta name="apple-mobile-web-app-title" content="Passcloud" />
     <meta name="application-name" content="Passcloud" />
+    <link rel="apple-touch-startup-image" href="./img/launch.png">
     <!-- ICONS -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png?v=M4ypg2nw0q">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png?v=M4ypg2nw0q">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png?v=M4ypg2nw0q">
-    <link rel="manifest" href="/img/icons/site.webmanifest?v=M4ypg2nw0q">
-    <link rel="mask-icon" href="/img/icons/safari-pinned-tab.svg?v=2.0.3" color="#3d5063">
-    <link rel="shortcut icon" href="/img/icons/favicon.ico?v=M4ypg2nw0q">
-    <meta name="apple-mobile-web-app-title" content="Passcloud">
-    <meta name="application-name" content="Passcloud">
+    <link rel="apple-touch-icon" href="touch-icon-iphone.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./img/icons/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/icons/apple-touch-icon-180x180.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="./img/icons/apple-touch-icon-ipad-retina.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/icons/favicon-16x16.png">
+    <link rel="manifest" href="./img/icons/site.webmanifest">
+    <link rel="mask-icon" href="./img/icons/safari-pinned-tab.svg" color="#3d5063">
+    <link rel="shortcut icon" href="./img/icons/favicon.ico">
     <meta name="msapplication-TileColor" content="#3d5063">
-    <meta name="msapplication-TileImage" content="/img/icons/mstile-144x144.png?v=M4ypg2nw0q">
-    <meta name="msapplication-config" content="/img/browserconfig.xml?v=M4ypg2nw0q">
+    <meta name="msapplication-TileImage" content="./img/icons/mstile-144x144.png">
+    <meta name="msapplication-config" content="./img/icons/browserconfig.xml">
     <meta name="theme-color" content="#3D5063">
     <!-- FACEBOOK META -->
     <meta property="og:type" content="website" />
@@ -205,7 +207,10 @@
             </div>
             <div class="modal-footer">
                 <div class="col l6 s12 left">
-                    <a href="https://github.com/spencerthayer/Passcloud">Passcloud</a> N&copy;! 2009 &mdash;
+                    <a href="https://github.com/spencerthayer/Passcloud">Passcloud</a>
+                    <!-- cc logo -->
+                    N&copy;!
+                    2009 &mdash;
                     <script>
                         document.write(new Date().getFullYear());
                     </script>
