--- a/index.html
+++ b/index.html
@@ -236,19 +236,20 @@
                 -->
             </div>
         </li>
-        <!-- <li> -->
-        <!-- Dropdown Trigger -->
-        <!-- <a class='dropdown-button btn' href='#' data-activates='dropdown1'>Drop Me!</a> -->
-        <!-- Dropdown Structure -->
-        <!-- <ul id='dropdown1' class='dropdown-content'>
-        <li><a href="#!">one</a></li>
-        <li><a href="#!">two</a></li>
-        <li class="divider"></li>
-        <li><a href="#!">three</a></li>
-        <li><a href="#!"><i class="material-icons">view_module</i>four</a></li>
-        <li><a href="#!"><i class="material-icons">cloud</i>five</a></li>
-        </ul> -->
-        <!-- </li> -->
+        <li>
+            <!-- Dropdown Trigger -->
+            <a class='dropdown-button btn' href='#' data-activates='dropdown1'>Drop Me!</a>
+
+            <!-- Dropdown Structure -->
+            <ul id='dropdown1' class='dropdown-content'>
+                <li><a href="#!">one</a></li>
+                <li><a href="#!">two</a></li>
+                <li class="divider"></li>
+                <li><a href="#!">three</a></li>
+                <li><a href="#!"><i class="material-icons">view_module</i>four</a></li>
+                <li><a href="#!"><i class="material-icons">cloud</i>five</a></li>
+            </ul>
+        </li>
         <li>
             <div class="input-field">
                 <input type="text" name="syncKey" value="" id="syncKey" class="syncKey" title="" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" onkeypress="putSyncKey()" /*disabled="disabled" */ /><button class="syncInput"
