--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                     <div class="logo-wrapper noselect hide-on-large-only">
                             <img src="./img/logo.png" class="brand-logo" alt="Passcloud brand logo.">
                             <span class="logo-text">Passcloud</span>
+                            TEST
                     </div>
                 </div>
                 <div class="input-field masterPassword col s12 m12 l12 text-white inline">
